--- a/_includes/blog/header.html
+++ b/_includes/blog/header.html
@@ -7,7 +7,7 @@
                         <button class="btn-menu" title="{{ site.data.i18n[site.lang].menu }}"></button>
                         <a href="{{ site.paths.home | relative_url }}">{{ site.title }}</a>
                     </li>
-                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].home }}" href="{{ site.paths.software | relative_url }}">{{ site.data.i18n[site.lang].software }}</a></li>
+                    <li class="nav-link"><a title="{{ site.data.i18n[site.lang].edu }}" href="{{ site.paths.edu | relative_url }}">{{ site.data.i18n[site.lang].edu }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].download }}" href="{{ site.paths.download | relative_url }}">{{ site.data.i18n[site.lang].download }}</a></li>
                     <li class="nav-link"><a title="{{ site.data.i18n[site.lang].forum }}" href="{{ site.paths.forum | relative_url }}">{{ site.data.i18n[site.lang].forum }}</a></li>
                 </ul>
