--- a/_includes/blog/overlay.html
+++ b/_includes/blog/overlay.html
@@ -4,7 +4,7 @@
         <a class="btn-close">{{ site.data.i18n[site.lang].close }}</a>
         <div class="results">
             <ul>
-                <li><a href="{{ site.paths.home | relative_url }}">{{ site.data.i18n[site.lang].edu }}</a></li>
+                <li><a href="{{ site.paths.edu | relative_url }}">{{ site.data.i18n[site.lang].edu }}</a></li>
                 <li><a href="{{ site.paths.download | relative_url }}">{{ site.data.i18n[site.lang].download }}</a></li>
                 <li><a href="{{ site.paths.forum | relative_url }}">{{ site.data.i18n[site.lang].forum }}</a></li>
             </ul>
