--- a/_sass/simple-texture/common/_social-icons.scss
+++ b/_sass/simple-texture/common/_social-icons.scss
@@ -98,4 +98,9 @@ $size: 48;
         background-color: #7289DA;
     }
 
+    .ico-groups {
+        @include get-ico-image(groups);
+
+        background-color: #42A5F5;
+    }
 }
